--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ API_TOKEN_SALT=/P17AvZPwOssO3yRe3i8IA==
 ADMIN_JWT_SECRET=vVZkDbFwM+YsdIuGc0uGdQ==
 JWT_SECRET=otVTE7I1mH46DS9f7TH4Fg==
 
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=strapi
-DATABASE_USERNAME=strapi
-DATABASE_PASSWORD=strapi
-DATABASE_CLIENT=postgres
+DATABASE_HOST=pullcrm.com
+DATABASE_PORT=3306
+DATABASE_NAME=strapi_dev
+DATABASE_USERNAME=pullcrm_dev
+DATABASE_PASSWORD=2^)5PgR7th
+DATABASE_CLIENT=mysql
