--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^1.1.0",
+    "@strapi/plugin-documentation": "^4.1.12",
     "@strapi/plugin-i18n": "4.1.12",
+    "@strapi/plugin-seo": "^1.7.3",
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/strapi": "4.1.12",
-    "pg": "8.6.0"
+    "sails-mysql": "^2.0.0",
+    "strapi-plugin-populate-deep": "^0.1.2",
+    "strapi-plugin-slugify": "^2.2.2",
+    "strapi-plugin-transformer": "^2.0.1"
   },
   "author": {
     "name": "A Strapi developer"
