--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Create the release folder on the server
         run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'mkdir /var/www/pullcrm.com/strapi/versions/release-${{ steps.date.outputs.date }}'
 
-      # - name: Upload files to the server
-      #   run: rsync -r ./ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:'/var/www/pullcrm.com/strapi/versions/release-${{ steps.date.outputs.date }}'
+      - name: Upload files to the server
+        run: rsync -r ./ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:'/var/www/pullcrm.com/strapi/versions/release-${{ steps.date.outputs.date }}'
 
       # - name: Link the release folder on the server
       #   run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'rm /var/www/pullcrm.com/strapi/release && ln -s /var/www/pullcrm.com/strapi/versions/release-${{ steps.date.outputs.date }} /var/www/pullcrm.com/strapi/release && ln -s /var/www/pullcrm.com/strapi/public/ /var/www/pullcrm.com/strapi/release/'
