--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pg": "^8.7.3",
     "sails-mysql": "^2.0.0",
     "strapi-plugin-populate-deep": "^0.1.2",
-    "strapi-plugin-slugify": "git+ssh://git@github.com/pullcrm/strapi-plugin-slugify.git",
+    "strapi-plugin-slugify": "git+https://github.com/pullcrm/strapi-plugin-slugify.git",
     "strapi-plugin-transformer": "^2.0.1"
   },
   "author": {
