--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,16 +32,19 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
+      - name: Stop project
+        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'pm2 stop /var/www/pullcrm.com/strapi/app/ecosystem.config.js'
+
       - name: Update server project
-        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cd /var/www/pullcrm.com/strapi/app && git pull && yarn install'
+        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cd /var/www/pullcrm.com/strapi/app && git pull && yarn install && yarn build'
 
-      # - name: Reload project
-      #   run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'source ~/.nvm/nvm.sh && pm2 startOrReload /var/www/pullcrm.com/strapi/ecosystem.config.js'
+      - name: Reload project
+        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'pm2 startOrReload /var/www/pullcrm.com/strapi/app/ecosystem.config.js'
 
-      # - name: Slack Notify
-      #   if: always()
-      #   uses: rtCamp/action-slack-notify@v2.2.0
-      #   env:
-      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-      #     SLACK_COLOR: ${{ job.status }}
-      #     SLACK_USERNAME: Autodeploy STRAPI
+      - name: Slack Notify
+        if: always()
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_USERNAME: Autodeploy STRAPI
