--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,11 +32,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
+      # TODO: Make something with bash (source, eval, What it is ???)
       - name: Stop project
         run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'source ~/.nvm/nvm.sh && pm2 stop /var/www/pullcrm.com/strapi/app/ecosystem.config.js'
 
       - name: Update server project
-        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cd /var/www/pullcrm.com/strapi/app && git pull && yarn install && yarn build'
+        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'eval $(ssh-agent -s) && ssh-add ~/.ssh/github-actions && cd /var/www/pullcrm.com/strapi/app && git pull && yarn install && yarn build'
 
       - name: Reload project
         run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'source ~/.nvm/nvm.sh && pm2 startOrReload /var/www/pullcrm.com/strapi/app/ecosystem.config.js'
