--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Copy 'ecosystem.config.js' file to project
         run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cp /var/www/pullcrm.com/strapi/ecosystem.config.js /var/www/pullcrm.com/strapi/release/ecosystem.config.js'
 
+      - name: Delete old versions of project
+        run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'cd /var/www/pullcrm.com/strapi/versions && rm -rf `ls -t | tail -n +6`'
+
       # - name: Install modules and build project
       #   run: ssh ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} 'source ~/.nvm/nvm.sh && nvm use 16 && cd /var/www/pullcrm.com/strapi/release && npm install && npm run build'
 
