--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "node": ">=12.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "resolutions": {
+    "sharp": "^0.28.3"
+  }
 }
