--- a/package.json
+++ b/package.json
@@ -33,8 +33,5 @@
     "node": ">=12.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT",
-  "resolutions": {
-    "sharp": "^0.28.3"
-  }
+  "license": "MIT"
 }
