--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.7.3",
     "sails-mysql": "^2.0.0",
     "strapi-plugin-populate-deep": "^0.1.2",
+    "strapi-plugin-sitemap": "^2.0.8",
     "strapi-plugin-slugify": "git+ssh://git@github.com/pullcrm/strapi-plugin-slugify.git#3.0.1",
     "strapi-plugin-transformer": "^2.0.1"
   },
