--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^1.1.0",
-    "@strapi/plugin-documentation": "4.2.3",
-    "@strapi/plugin-i18n": "4.2.3",
+    "@strapi/plugin-documentation": "4.3.6",
+    "@strapi/plugin-i18n": "4.3.6",
     "@strapi/plugin-seo": "^1.7.3",
-    "@strapi/plugin-users-permissions": "4.2.3",
-    "@strapi/strapi": "4.2.3",
+    "@strapi/plugin-users-permissions": "4.3.6",
+    "@strapi/strapi": "4.3.6",
     "pg": "^8.7.3",
     "sails-mysql": "^2.0.0",
     "strapi-plugin-populate-deep": "^0.1.2",
+    "strapi-plugin-publisher": "^1.1.3",
     "strapi-plugin-sitemap": "git+ssh://git@github.com/pullcrm/strapi-plugin-sitemap.git#2.0.9",
     "strapi-plugin-slugify": "git+ssh://git@github.com/pullcrm/strapi-plugin-slugify.git#3.0.2",
     "strapi-plugin-transformer": "^2.0.1"
@@ -31,7 +32,7 @@
     "uuid": "5b34ebaa-cfe4-43a0-9f73-da94c2db09b2"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=14.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
